Added search functionality

--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.14.6",
+    "bootstrap": "^5.0.2",
     "react": "^16.2.0",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.0.17"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "1.0.17",
+    "styled-jsx": "^3.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
