--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "1.0.17",
+    "react-star-rating-component": "^1.4.1",
     "styled-jsx": "^3.4.4"
   },
   "scripts": {
